<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.github.ci-cmg</groupId>
    <artifactId>pace</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>

  <artifactId>pace-gui</artifactId>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>io.github.ci-cmg</groupId>
      <artifactId>pace-repository</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.ci-cmg</groupId>
      <artifactId>pace-json-datastore</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.ci-cmg</groupId>
      <artifactId>pace-utilities</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.ci-cmg</groupId>
      <artifactId>pace-translator</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.ci-cmg</groupId>
      <artifactId>pace-packaging</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.4.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j2-impl</artifactId>
    </dependency>
    <dependency>
      <groupId>com.lmax</groupId>
      <artifactId>disruptor</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-swing-junit</artifactId>
      <version>3.17.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.10.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.dhatim</groupId>
      <artifactId>fastexcel</artifactId>
      <version>0.17.0</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>application.properties</include>
          <include>log4j2.xml</include>
          <include>check_20dp_FILL0_wght400_GRAD0_opsz20.png</include>
          <include>close_20dp_FILL0_wght400_GRAD0_opsz20.png</include>
          <include>exclamation_20dp_FILL0_wght400_GRAD0_opsz20.png</include>
          <include>keyboard_arrow_up_24dp_FILL0_wght400_GRAD0_opsz24.png</include>
          <include>keyboard_arrow_down_24dp_FILL0_wght400_GRAD0_opsz24.png</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <configuration>
          <excludeFilterFile>${project.parent.basedir}/spotbugs-exclude.xml</excludeFilterFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>edu.colorado.cires.pace.gui.Application</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>dep-check</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.owasp</groupId>
            <artifactId>dependency-check-maven</artifactId>
            <version>8.4.3</version>
            <configuration>
              <failBuildOnCVSS>0</failBuildOnCVSS>
              <suppressionFiles>
                <suppressionFile>${project.parent.basedir}/owasp-dep-check-suppression.xml</suppressionFile>
              </suppressionFiles>
            </configuration>
            <executions>
              <execution>
                <id>check-dependencies</id>
                <phase>prepare-package</phase>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>